test(clients-service): add unit and integration tests for health providers